audioeeg dataset compatibility

--- a/audioldm_train/config/2023_08_23_reproduce_audioldm/audioldm_eeg.yaml
+++ b/audioldm_train/config/2023_08_23_reproduce_audioldm/audioldm_eeg.yaml
@@ -15,10 +15,9 @@ variables:
   warmup_steps: &warmup_steps 2000
 
 data: 
-  train: ["audiocaps"]
-  val: "audiocaps"
-  test: "audiocaps"
-  class_label_indices: "audioset_eval_subset"
+  train: ["audioeeg"]
+  val: "audioeeg"
+  test: "audioeeg"
   dataloader_add_ons: ["waveform_rs_48k"] 
 
 step:
