--- a/audioldm_train/config/2023_08_23_reproduce_audioldm/audioldm_eeg.yaml
+++ b/audioldm_train/config/2023_08_23_reproduce_audioldm/audioldm_eeg.yaml
@@ -108,9 +108,9 @@ model:
       params:
         image_size: 64 # Ignore this parameter
         # Conditioning
-        # extra_film_condition_dim: 512 # If you use film as extra condition, set this parameter. For example if you have two conditioning vectors each have dimension 512, then this number would be 1024
-        context_dim: 
-        - 1024
+        extra_film_condition_dim: 512 # If you use film as extra condition, set this parameter. For example if you have two conditioning vectors each have dimension 512, then this number would be 1024
+        # context_dim: 
+        # - 1024
         in_channels: *unet_in_channels # The input channel of the UNet model
         out_channels: *latent_embed_dim # TODO might need to change
         model_channels: 128 # TODO might need to change
